# slowdoctor-type

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  wrangler.jsonc
.github/workflows/: ci.yml
authcore/: Cargo.toml
authcore/src/: lib.rs
extract/: Cargo.toml
extract/src/: federal.rs  lib.rs  pmc.rs  readability.rs  voa.rs
migrations/: 0001_init.sql  0002_classic_seed.sql  0003_track_index.sql  0004_daily_seed.sql  0005_track_rework.sql  0006_users_auth.sql  0007_feed_log.sql  0008_pmc_rename.sql  0009_vocab_seed.sql  0010_fk_grade.sql  0011_code_seed.sql  0012_user_history.sql
scoring/: Cargo.toml
scoring/src/: lib.rs
scripts/: check.sh  e2e.sh  gen_classic_seed.py  gen_code_seed.py  gen_daily_seed.py  gen_vocab_seed.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/e2e/: shots.mjs  smoke.mjs
web/scripts/: selftest.ts
web/src/: account.ts  api.ts  avatar.ts  dashboard.ts  dom.ts  engine.ts  fallback.ts  goals.ts  history.ts  main.ts  scoring.ts  settings.ts  storage.ts  style.css  sync.ts  tracks.ts  words.ts
worker/: Cargo.toml
worker/src/: api.rs  auth.rs  feeder.rs  http.rs  lib.rs
